[gd_scene load_steps=13 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://art/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/droid-sans/DroidSans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/droid-sans/DroidSans.ttf" type="DynamicFontData" id=4]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 1, 0.368627, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.407843, 0.407843, 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 19
font_data = ExtResource( 4 )

[node name="HUD" type="Node2D"]
script = ExtResource( 2 )

[node name="Magazine" type="Label" parent="."]
margin_left = 16.0
margin_top = 534.0
margin_right = 132.0
margin_bottom = 585.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "magazine:
"

[node name="ammo" type="Label" parent="."]
margin_left = 16.0
margin_top = 558.0
margin_right = 91.0
margin_bottom = 599.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Ammo
"

[node name="reload" type="Label" parent="."]
margin_left = 391.0
margin_top = 548.0
margin_right = 612.0
margin_bottom = 567.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Out of ammo. Press R to reload"

[node name="noBullets" type="Label" parent="."]
visible = false
margin_left = 407.0
margin_top = 249.0
margin_right = 623.0
margin_bottom = 278.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "No more bullets left"

[node name="OutofBullets" type="Timer" parent="."]

[node name="AmmoCount" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 835.0
margin_top = 544.0
margin_right = 937.0
margin_bottom = 558.0
rect_scale = Vector2( 1.84466, 2.81179 )
theme = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Total Ammo: 10"
valign = 1
__meta__ = {
"_edit_group_": true
}

[node name="StaminaBar" type="ProgressBar" parent="."]
margin_left = 864.0
margin_top = 34.0
margin_right = 1024.0
margin_bottom = 71.0
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
step = 10.0
value = 100.0
percent_visible = false

[node name="OutOfStamina" type="Label" parent="."]
visible = false
margin_left = 840.0
margin_top = 73.0
margin_right = 1024.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Out of Stamina. Don't run."

[node name="StaminaLabel" type="Label" parent="."]
margin_left = 908.0
margin_top = 41.0
margin_right = 977.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Stamina"

[connection signal="timeout" from="OutofBullets" to="." method="_on_OutofBullets_timeout"]
